# vcsv

./: .gitignore  Cargo.toml  README.md  merkle.json
cli/: Cargo.toml
cli/src/: main.rs
examples/: medium.csv  tiny.csv
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
script/src/: lib.rs
script/tests/: merkle_tests.rs
