[package]
version = "0.1.0"
name = "vcsv-cli"
edition = "2021"

[[bin]]
name = "vcsv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
vcsv-script = { path = "../script" }
vcsv-lib = { path = "../lib" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }